Added REF_CHECK, Added watch, Added more JSDocs

--- a/base.html
+++ b/base.html
@@ -3,6 +3,8 @@
 <title>{%block 'title' %}default{%/block %}</title>
 </head>
 <body>
-{%block 'content' %}default{%/block %}
+	<div id="main">
+		{%block 'content' %}Hello!{%/block %}
+	</div>
 </body>
 </html>
