Renamed test.js to server.js

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 {%extends 'base' %}
 {%block 'title' %}hello{%/block %}
 {%block 'content' %}
-
-	{%each ["Hello ", "," , "Dolly!"] %}
-		{%= this %}
-	{%/each %}
+	Вот беда!
 {%/block %}
