Fixed demo, and added try catch block

--- a/base.html
+++ b/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html>
 <head>
 <title>{%block 'title' %}default{%/block %}</title>
+{%block 'head' %}{%/block %}
 </head>
 <body>
 	<div id="main">
