--- a/index.html
+++ b/index.html
@@ -1,5 +1,39 @@
 {%extends 'base' %}
-{%block 'title' %}hello{%/block %}
-{%block 'content' %}
+
+{%block 'title' %}nTPL Simple demo{%/block %}
+{%block 'head' %}
+{%
+	var shadow = "0 0 4px #333";
+	var radius = "30px";
 	
+	function crossbrowser( attr , val) {
+		return [
+			"-webkit-" , attr ,  ":" , val , ";",
+			"-moz-" , attr ,  ":" , val , ";",
+			attr ,  ":" , val , ";"
+		].join("");
+	}
+%}
+<style type="text/css">
+	#A {
+		background: black;
+		color: white;
+		font-size: 20px;
+		margin: 0 auto;
+		width: 200px;
+		
+		{%= crossbrowser("border-radius", radius) %}
+		
+		{%= crossbrowser("box-shadow", shadow) %}
+		
+		padding: 30px;
+		text-align: center;
+	}
+</style>
+{%/block %}
+
+{%block 'content' %}
+	<div id="A">
+		Hello, %username%!
+	</div>
 {%/block %}
