--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 {%extends 'base' %}
 
 {%block 'title' %}nTPL Simple demo{%/block %}
+
 {%block 'head' %}
 {%
 	var shadow = "0 0 4px #333";
@@ -19,7 +20,7 @@
 		background: black;
 		color: white;
 		font-size: 20px;
-		margin: 0 auto;
+		margin: 25% auto 0 auto;
 		width: 200px;
 		
 		{%= crossbrowser("border-radius", radius) %}
@@ -34,6 +35,6 @@
 
 {%block 'content' %}
 	<div id="A">
-		Hello, %username%!
+		Hello, {%= 'Olga Kamishnikova' %}!!!
 	</div>
 {%/block %}
