--- a/tpl/index.html
+++ b/tpl/index.html
@@ -35,6 +35,6 @@
 
 {%block 'content' %}
 	<div id="A">
-		Hello, {%= 'Olga Kamishnikova' %}!!!
+		Hello, {%= '%username' %}!!!
 	</div>
 {%/block %}
