--- a/tpl/index.html
+++ b/tpl/index.html
@@ -34,6 +34,12 @@
 {%/block %}
 
 {%block 'content' %}
+	{*
+		Hi all!
+		This is a commented block!
+		
+		And here comes body of page!
+	*}
 	<div id="A">
 		Hello, {%= '%username' %}!!!
 	</div>
