--- a/tpl/index.html
+++ b/tpl/index.html
@@ -1,5 +1,5 @@
 {%set name index; %}
-{%set args username1; %}
+{%set args username; %}
 {%extends 'base' %}
 
 {%block 'title' %}nTPL Simple demo{%/block %}
