Fixed arguments changing

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -43,7 +43,7 @@
 		And here comes body of page!
 	*}
 	<div id="A">
-		Hello, {%= username || "" %}!!!<br />
+		Hello, {%= usermail || "" %}!!!<br />
 		Your fax number is : {%= userfax || "" %}
 	</div>
 {%/block %}
