don't exit nodejs on errors

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -1,5 +1,5 @@
 {%set name index %}
-{%set args userfax,username %}
+{%set args userfax,username,usermail %}
 {%extends 'base' %}
 
 {%block 'title' %}nTPL Simple demo{%/block %}
