--- a/tpl/index.html
+++ b/tpl/index.html
@@ -43,7 +43,7 @@
 		And here comes body of page!
 	*}
 	<div id="A">
-		Hello, {%= usermail || "" %}!!!<br />
-		Your fax number is : {%= userfax || "" %}
+		Hello, {%= username %}!!!<br />
+		Your fax number is : {%= userfax %}
 	</div>
 {%/block %}
