--- a/tpl/index.html
+++ b/tpl/index.html
@@ -3,7 +3,7 @@
 
 {%extends 'base' %}
 
-{%block 'title' %}nTPL Simple demo{%/block %}
+{%block 'title' %}ntpl Simple demo{%/block %}
 
 {%block 'head' %}
 {%
